force-app/main/default/objects/Informe_de_Investigacion__c/Informe_de_Investigacion__c.object-meta.xml
<CustomObject>
    <label>Investigation Report</label>
    <nameField>
        <displayFormat>II-{000000}</displayFormat>
        <label>Correlative II</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>