force-app/main/default/objects/Informe_de_Investigacion__c/fields/area_affected__c.field-meta.xml
<CustomField>
    <fullName>area_affected__c</fullName>
    <label>Area affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envasado y Despacho</fullName>
            </value>
            <value>
                <fullName>Planta (PV o NV)</fullName>
            </value>
            <value>
                <fullName>Logística Nacional</fullName>
            </value>
            <value>
                <fullName>Logística Internacional</fullName>
            </value>
            <value>
                <fullName>Laboratorio</fullName>
            </value>
            <value>
                <fullName>Operaciones</fullName>
            </value>
            <value>
                <fullName>Producto Terminado</fullName>
            </value>
            <value>
                <fullName>Despacho</fullName>
            </value>
            <value>
                <fullName>Rusia</fullName>
            </value>
            <value>
                <fullName>Logística filial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>