force-app/main/default/objects/Informe_de_Investigacion__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Informes_de_Investigacion</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>