force-app/main/default/objects/Informe_de_Investigacion__c/fields/Causa_raiz_Encontrada__c.field-meta.xml
<CustomField>
    <fullName>Causa_raiz_Encontrada__c</fullName>
    <label>Causa raíz Encontrada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>