force-app/main/default/objects/Informe_de_Investigacion__c/fields/Estatus_RDP__c.field-meta.xml
<CustomField>
    <fullName>Estatus_RDP__c</fullName>
    <label>Estatus RDP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
            <value>
                <fullName>Rechazado por IC</fullName>
                <isActive>false</isActive>
                <label>Rechazado por IC</label>
            </value>
            <value>
                <fullName>Revisión de información</fullName>
                <isActive>false</isActive>
                <label>Revisión de información</label>
            </value>
            <value>
                <fullName>Validado por IC</fullName>
                <isActive>false</isActive>
                <label>Validado por IC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>