force-app/main/default/objects/Informe_de_Investigacion__c/fields/Estatus_Revision_1__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Revision_1__c</fullName>
    <label>Estatus Revisión 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enviado a aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>