force-app/main/default/objects/Informe_de_Investigacion__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insuficiente</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Revisión de información</fullName>
            </value>
            <value>
                <fullName>RDP</fullName>
            </value>
            <value>
                <fullName>Validación RDP</fullName>
            </value>
            <value>
                <fullName>Generación de informe</fullName>
            </value>
            <value>
                <fullName>1ra Revisión</fullName>
            </value>
            <value>
                <fullName>2da Revisión</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Aceptado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>