force-app/main/default/objects/Informe_de_Investigacion__c/fields/Fecha_de_asignacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_asignacion__c</fullName>
    <label>Fecha de asignación</label>
    <type>DateTime</type>
</CustomField>