force-app/main/default/objects/Informe_de_Investigacion__c/fields/Fecha_fin_IC__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fin_IC__c</fullName>
    <label>Fecha fin IC</label>
    <type>DateTime</type>
</CustomField>