force-app/main/default/objects/Informe_de_Investigacion__c/fields/Fecha_inicio_IC__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inicio_IC__c</fullName>
    <label>Fecha inicio IC</label>
    <type>DateTime</type>
</CustomField>