force-app/main/default/objects/Informe_de_Investigacion__c/fields/Fecha_inicio_RDP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inicio_RDP__c</fullName>
    <label>Fecha inicio RDP</label>
    <type>DateTime</type>
</CustomField>