force-app/main/default/objects/Informe_de_Investigacion__c/fields/Formato_Informe_Investigacin__c.field-meta.xml
<CustomField>
    <fullName>Formato_Informe_Investigacin__c</fullName>
    <label>Formato Informe Investigación</label>
    <type>Url</type>
</CustomField>