force-app/main/default/objects/Informe_de_Investigacion__c/fields/Informe_investigacion_adjuntado__c.field-meta.xml
<CustomField>
    <fullName>Informe_investigacion_adjuntado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informe investigación adjuntado</label>
    <type>Checkbox</type>
</CustomField>