force-app/main/default/objects/Informe_de_Investigacion__c/fields/Ingeniero_de_Calidad__c.field-meta.xml
<CustomField>
    <fullName>Ingeniero_de_Calidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingeniero de Calidad</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Informes_de_Investigacion</relationshipName>
    <type>Lookup</type>
</CustomField>