force-app/main/default/objects/Informe_de_Investigacion__c/fields/Investigador__c.field-meta.xml
<CustomField>
    <fullName>Investigador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigador</relationshipName>
    <type>Lookup</type>
</CustomField>