force-app/main/default/objects/Informe_de_Investigacion__c/fields/JGC__c.field-meta.xml
<CustomField>
    <fullName>JGC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JGC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>JGC</relationshipName>
    <type>Lookup</type>
</CustomField>