force-app/main/default/objects/Informe_de_Investigacion__c/fields/Motivo_de_devolucion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_devolucion__c</fullName>
    <label>Motivo de devolución</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Etapa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Información insuficiente</fullName>
            </value>
            <value>
                <fullName>Área no correspondida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>