force-app/main/default/objects/Informe_de_Investigacion__c/fields/Motivo_de_rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_rechazo__c</fullName>
    <label>Motivo de rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Etapa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RDP Deficiente</fullName>
            </value>
            <value>
                <fullName>Informe a Cliente Deficiente</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>