force-app/main/default/objects/Informe_de_Investigacion__c/fields/production_date__c.field-meta.xml
<CustomField>
    <fullName>production_date__c</fullName>
    <label>Production date</label>
    <type>Date</type>
</CustomField>