force-app/main/default/objects/Informe_de_Investigacion__c/fields/Resultado_Revision_Info__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Revision_Info__c</fullName>
    <defaultValue>&quot;En espera&quot;</defaultValue>
    <label>Resultado Revisión Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En espera</fullName>
            </value>
            <value>
                <fullName>Informacion _suficiente</fullName>
                <label>Información suficiente</label>
            </value>
            <value>
                <fullName>Informacion_insuficiente</fullName>
                <label>Información insuficiente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>