force-app/main/default/objects/Informe_de_Investigacion__c/fields/Total_dias_IC__c.field-meta.xml
<CustomField>
    <fullName>Total_dias_IC__c</fullName>
    <formula>ABS(Fecha_inicio_IC__c - Fecha_fin_IC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total días IC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>