force-app/main/default/objects/Informe_de_Investigacion__c/fields/Total_dias_RDP__c.field-meta.xml
<CustomField>
    <fullName>Total_dias_RDP__c</fullName>
    <formula>ABS(Fecha_inicio_RDP__c - Fecha_termino_RDP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total días RDP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>