force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/Aceptado.validationRule-meta.xml
<ValidationRule>
    <fullName>Aceptado</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Etapa__c, &quot;Aceptado&quot;)  &amp;&amp; 
NOT(ISPICKVAL(Estatus_Revision_2__c, &quot;Aprobado&quot;))</errorConditionFormula>
    <errorMessage>Para finalizar el proceso con una aceptación del informe a Cliente debes enviar a aprobación de PMD</errorMessage>
</ValidationRule>