force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/Estatus_RDP_Completado.validationRule-meta.xml
<ValidationRule>
    <fullName>Estatus_RDP_Completado</fullName>
    <active>true</active>
    <description>Regla de validación que impide pasar a Estatus RDP sin antes adjuntar el informe de investigación resultante de la RDP</description>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL( Estatus_RDP__c, &quot;Completado&quot;),
								Informe_investigacion_adjuntado__c = false
								),
				TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Debes adjuntar el informe resultante de la RDP bajo el formato indicado.</errorMessage>
</ValidationRule>