force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/Etapa_insuficiente.validationRule-meta.xml
<ValidationRule>
    <fullName>Etapa_insuficiente</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(Etapa__c, &quot;Insuficiente&quot;),
								OR(
												ISBLANK(Descripcion__c), 
								    ISBLANK(TEXT(Motivo_de_devolucion__c))
											)
								), true, false)</errorConditionFormula>
    <errorMessage>Debes indicar el motivo de devolución y describirlo.</errorMessage>
</ValidationRule>