force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/Etapa_Rechazado.validationRule-meta.xml
<ValidationRule>
    <fullName>Etapa_Rechazado</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(Etapa__c, &quot;Rechazado&quot;),
								ISBLANK(TEXT(Motivo_de_rechazo__c))
								),
				TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Debes indicar el motivo de rechazo.</errorMessage>
</ValidationRule>