force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/GI_a_1RA_REV.validationRule-meta.xml
<ValidationRule>
    <fullName>GI_a_1RA_REV</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(Etapa__c ,&quot;1ra Revisión&quot;),
								Informe_Cliente_adjuntado__c = FALSE
								),
				true, false)</errorConditionFormula>
    <errorMessage>Antes de avanzar con la primera revisión debes declarar y adjuntar Informe a Cliente.</errorMessage>
</ValidationRule>