force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/Insuficiencia_de_Informacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Insuficiencia_de_Informacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Etapa__c),ISPICKVAL(Resultado_Revision_Info__c, &quot;Informacion_insuficiente&quot;),OR(TEXT(Etapa__c) &lt;&gt; &quot;Revisión de información&quot;,TEXT(Etapa__c) &lt;&gt;&quot;Insuficiente&quot;))</errorConditionFormula>
    <errorMessage>Si no cuentas con información suficiente para realizar la investigación debes seleccionar la etapa &quot;Insuficiente&quot;</errorMessage>
</ValidationRule>