force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/Nuevo_a_RevisionDeInformacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Nuevo_a_RevisionDeInformacion</fullName>
    <active>true</active>
    <description>Regla de validación que impide pasar a etapa Revisión de información sin antes asignar a los responsables del proceso</description>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL( Etapa__c, &quot;Revisión de información&quot;),
								OR(
												ISBLANK(JGC__c),
												ISBLANK(Investigador__c),
												ISBLANK(Ingeniero_de_Calidad__c))
								),
				TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Antes de avanzar debes completar a los responsables del proceso de investigación.</errorMessage>
</ValidationRule>