force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/Proceso_de_aprobacion_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Proceso_de_aprobacion_1</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(
								ISBLANK(TEXT(Estatus_Revision_1__c)),
								ISPICKVAL( Etapa__c, &quot;1ra Revisión&quot;)
								),
				TRUE, FALSE
				)</errorConditionFormula>
    <errorMessage>No puedes avanzar manualmente hacia la etapa 1ra revisión, debes enviar a aprobación la investigación.</errorMessage>
</ValidationRule>