force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/Segunda_revision.validationRule-meta.xml
<ValidationRule>
    <fullName>Segunda_revision</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Etapa__c, &quot;2da Revisión&quot;)  &amp;&amp; 
NOT(ISPICKVAL(Estatus_Revision_1__c, &quot;Aprobado&quot;))</errorConditionFormula>
    <errorMessage>Antes de avanzar a la revisión del PMD debes enviar a aprobar al JGC y GC</errorMessage>
</ValidationRule>