force-app/main/default/objects/Informe_de_Investigacion__c/validationRules/ValidacionRDP.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacionRDP</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(Etapa__c, &quot;Validación RDP&quot;),
								ISPICKVAL(Estatus_RDP__c, &quot;Pendiente&quot;)
								),
				TRUE, FALSE)</errorConditionFormula>
    <errorMessage>No puedes avanzar sin marcar la RDP como completada.</errorMessage>
</ValidationRule>