force-app/main/default/objects/Informe_de_Investigacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Etapa__c</columns>
    <columns>Fecha_de_asignacion__c</columns>
    <columns>Ingeniero_de_Calidad__c</columns>
    <columns>Investigador__c</columns>
    <columns>JGC__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>