force-app/main/default/objects/Informe_de_Investigacion__c/listViews/Ing_de_Calidad_Mis_Investigaciones.listView-meta.xml
<ListView>
    <fullName>Ing_de_Calidad_Mis_Investigaciones</fullName>
    <columns>NAME</columns>
    <columns>Fecha_de_asignacion__c</columns>
    <columns>Caso__c</columns>
    <columns>Etapa__c</columns>
    <columns>Ingeniero_de_Calidad__c</columns>
    <columns>Investigador__c</columns>
    <columns>Estatus_RDP__c</columns>
    <columns>Estatus_Revision_1__c</columns>
    <columns>Estatus_Revision_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>Quality Engineer: My investigations</label>
</ListView>