force-app/main/default/objects/Informe_de_Investigacion__c/listViews/Investigador_Investigaciones.listView-meta.xml
<ListView>
    <fullName>Investigador_Investigaciones</fullName>
    <columns>NAME</columns>
    <columns>Caso__c</columns>
    <columns>Fecha_de_asignacion__c</columns>
    <columns>Etapa__c</columns>
    <columns>Investigador__c</columns>
    <columns>Ingeniero_de_Calidad__c</columns>
    <columns>Estatus_RDP__c</columns>
    <columns>Resultado_Revision_Info__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Etapa__c</field>
        <operation>equals</operation>
        <value>Nuevo,Revisión de información,RDP</value>
    </filters>
    <label>Investigator:  My investigations</label>
</ListView>